// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropSpot should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="dropArea"
    >
      <div
        class="root uui-flex-row uui-size-24"
      >
        <div
          class="container uui-icon uui-enabled iconBlue"
        >
          <svg
            class=""
          />
        </div>
        <div
          class="root uui-text uui-size-24 lineHeight fontSize uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography-inline dropCaption container"
          style="--uui-text-font-size: 14px; --uui-text-line-height: 24px;"
        >
          Drop files to attach or
        </div>
        <div>
          <input
            class="fileInput"
            multiple=""
            type="file"
          />
          <div
            class="uui-typography uui-typography-size-14"
          >
            <button
              class="uui-button-box uui-enabled -clickable uui-link_button root uui-size-36 uui-no-left-icon uui-no-right-icon uui-color-primary link"
              tabindex="0"
              type="button"
            >
              <div
                class="uui-caption uui-link-button-weight-semibold"
              >
                browse
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropSpot should be rendered correctly with props 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="dropArea"
    >
      <div
        class="root uui-flex-row uui-size-24"
      >
        <div
          class="container uui-icon uui-enabled iconBlue"
        >
          <svg
            class=""
          />
        </div>
        <div
          class="root uui-text uui-size-24 lineHeight fontSize uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography-inline dropCaption container"
          style="--uui-text-font-size: 14px; --uui-text-line-height: 24px;"
        >
          Drop files to attach or
        </div>
        <div>
          <input
            class="fileInput"
            multiple=""
            type="file"
          />
          <div
            class="uui-typography uui-typography-size-14"
          >
            <button
              class="uui-button-box uui-enabled -clickable uui-link_button root uui-size-36 uui-no-left-icon uui-no-right-icon uui-color-primary link"
              tabindex="0"
              type="button"
            >
              <div
                class="uui-caption uui-link-button-weight-semibold"
              >
                browse
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="root uui-text uui-size-24 lineHeight fontSize uui-color-tertiary uui-font-weight-400 uui-font-style-normal uui-typography-inline container"
        style="--uui-text-font-size: 14px; --uui-text-line-height: 24px;"
      >
        Test info
      </div>
    </div>
  </div>
</DocumentFragment>
`;
